pac4j-async-34 Implement the test for exception occurring during profile retrieval on AsyncBaseCl...